# nnrp-cs

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Directory.Build.props  Nnrp.sln  README.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  docs.md  feature.md  maintenance.md  release.md
.github/workflows/: ci.yml  darwin-validation.yml  release.yml
conformance/: nnrp-1-preview2.capabilities.json  nnrp-1-preview3.capabilities.json
doc/: rs-native-artifacts-migration.md
doc/benchmarks/: rs-native-artifacts-migration.md
native/nnrp_quic_bridge/: Cargo.toml
native/nnrp_quic_bridge/src/: lib.rs
samples/: MinimalSamples.cs
samples/Nnrp.Quic.Net8Sample/: Nnrp.Quic.Net8Sample.csproj  SystemNetQuicMessageTransport.cs
samples/Nnrp.QuicPreview.Net8Sample/: Program.cs
scripts/: build_upm_package.py  check_incremental_coverage.ps1  repro_native_bridge.ps1  run_external_loopback_smoke.ps1  run_runtime_loopback_smoke.ps1
src/Nnrp.Client/: INnrpClientSession.cs  Nnrp.Client.csproj  NnrpClient.cs  NnrpClientSession.cs  NnrpInFlightFrame.cs  NnrpSessionEvent.cs  NnrpSubmitRequest.cs  NnrpSubmittedFrame.cs  NnrpTransportMigrationTrigger.cs  NnrpTransportMigrationTriggerOptions.cs  NnrpTransportMigrationTriggerTypes.cs  NnrpTransportProbeBinding.cs  NnrpTransportProbeBindingSummary.cs  NnrpTransportProbeOptions.cs  NnrpTransportProbeOrchestrator.cs  NnrpTransportProbeSelectionResult.cs  NnrpTransportSelectionDecision.cs  README.md
src/Nnrp.Core/: BinaryAlignment.cs  BodyCodec.cs  CloseMessage.cs  (+69 more)
(+177 files in other folders)
